// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`authentication-mutations > login 1`] = `
{
  "data": {
    "login": {
      "_id": Any<String>,
    },
  },
  "errors": undefined,
}
`;

exports[`authentication-mutations > login bad password 1`] = `
{
  "data": null,
  "errors": [
    {
      "extensions": {
        "code": "INTERNAL_SERVER_ERROR",
      },
      "locations": [
        {
          "column": 3,
          "line": 2,
        },
      ],
      "message": "Login failure: username or password are incorrect",
      "path": [
        "login",
      ],
    },
  ],
}
`;

exports[`authentication-mutations > login bad username 1`] = `
{
  "data": null,
  "errors": [
    {
      "extensions": {
        "code": "INTERNAL_SERVER_ERROR",
      },
      "locations": [
        {
          "column": 3,
          "line": 2,
        },
      ],
      "message": "Login failure: username or password are incorrect",
      "path": [
        "login",
      ],
    },
  ],
}
`;

exports[`authentication-mutations > with invite emails available > register good 1`] = `
{
  "data": {
    "register": {
      "_id": Any<String>,
    },
  },
  "errors": undefined,
}
`;

exports[`authentication-mutations > with invite emails available > register use code twice 1`] = `
{
  "data": null,
  "errors": [
    {
      "extensions": {
        "code": "INTERNAL_SERVER_ERROR",
      },
      "locations": [
        {
          "column": 3,
          "line": 2,
        },
      ],
      "message": "Registration Error: No invite exists for this email",
      "path": [
        "register",
      ],
    },
  ],
}
`;

exports[`authentication-mutations > with invite emails available > register use email twice 1`] = `
{
  "data": null,
  "errors": [
    {
      "extensions": {
        "code": "INTERNAL_SERVER_ERROR",
      },
      "locations": [
        {
          "column": 3,
          "line": 2,
        },
      ],
      "message": "Registration Error: Username already used",
      "path": [
        "register",
      ],
    },
  ],
}
`;

exports[`authentication-mutations > with invite emails available > register use username twice 1`] = `
{
  "data": null,
  "errors": [
    {
      "extensions": {
        "code": "INTERNAL_SERVER_ERROR",
      },
      "locations": [
        {
          "column": 3,
          "line": 2,
        },
      ],
      "message": "Registration Error: Username already used",
      "path": [
        "register",
      ],
    },
  ],
}
`;
